lead flight attendant is a router, defined in config file

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -68,5 +68,16 @@ akka {
     debug {
       lifecycle = on
     }
+
+    deployment {
+      /Plane/FlightAttendantRouter {
+        router = "random"
+        resizer {
+          lower-bound = 4
+          upper-bound = 10
+        }
+      }
+
+    }
   }
 }
