--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -81,3 +81,51 @@ akka {
     }
   }
 }
+
+airport-remote {
+  zzz {
+    akka {
+      avionics {
+        plane-system = "Plane"
+        plane-host = "127.0.0.1"
+        plane-port = 2553
+      }
+    }
+  }
+  akka {
+    actor {
+      provider = "akka.remote.RemoteAcorRefProvider"
+    }
+    remote {
+      transport = "akka.remote.netty.NettyRemoteTransport"
+      netty {
+        hostname = "127.0.0.1"
+        port = 2552
+      }
+    }
+  }
+}
+
+plane-remote {
+  zzz {
+    akka {
+      avionics {
+        airport-system = "Airport"
+        airport-host = "127.0.0.1"
+        airport-port = 2552
+      }
+    }
+  }
+  akka {
+    actor {
+      provider = "akka.remote.RemoteActorRefProvider"
+    }
+    remote {
+      transport = "akka.remote.netty.NettyRemoteTransport"
+      netty {
+        hostname = "127.0.0.1"
+        port = 2553
+      }
+    }
+  }
+}
