fix config to match new version of akka-remote, add multi-jvm plugin

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -97,8 +97,8 @@ airport-remote {
       provider = "akka.remote.RemoteAcorRefProvider"
     }
     remote {
-      transport = "akka.remote.netty.NettyRemoteTransport"
-      netty {
+      enabled-transports = ["akka.remote.netty.tcp"]
+      netty.tcp {
         hostname = "127.0.0.1"
         port = 2552
       }
@@ -121,8 +121,8 @@ plane-remote {
       provider = "akka.remote.RemoteActorRefProvider"
     }
     remote {
-      transport = "akka.remote.netty.NettyRemoteTransport"
-      netty {
+      enabled-transports = ["akka.remote.netty.tcp"]
+      netty.tcp {
         hostname = "127.0.0.1"
         port = 2553
       }
