fix typo in config, remove code that doesn t compile yet.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -94,7 +94,7 @@ airport-remote {
   }
   akka {
     actor {
-      provider = "akka.remote.RemoteAcorRefProvider"
+      provider = "akka.remote.RemoteActorRefProvider"
     }
     remote {
       enabled-transports = ["akka.remote.netty.tcp"]
